[package]
name = "feldera-macros"
description = "Continuous streaming analytics engine"
categories = ["algorithms", "data-structures"]
publish = true
readme = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1"
prettyplease = "0.2.29"

[dev-dependencies]
derive_more = { version = "1.0", features = ["not"] }
rkyv = { workspace = true, features = ["std", "size_64", "validation"] }
serde = { workspace = true, features = ["derive"] }
size-of = { workspace = true }
dbsp = { workspace = true }
feldera-sqllib = { workspace = true }

[lib]
proc-macro = true
