[package]
name = "feldera-macros"
description = "Continuous streaming analytics engine"
categories = ["algorithms", "data-structures"]
publish = true
readme = { workspace = true }
keywords = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1"
prettyplease = "0.2.29"

[lib]
proc-macro = true
