[package]
name = "feldera-observability"
description = "Shared observability utilities for Feldera services"
publish = true
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
awc = { workspace = true }
actix-http = { workspace = true }
reqwest = { workspace = true }
sentry = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
