[package]
name = "feldera-storage"
version = "0.1.0"
edition = "2021"


[dependencies]
rkyv = { version = "0.7.42", default-features = false, features = ["std", "size_64", "validation"] }
binrw = "0.13.3"
crc32c = "0.6.4"
num-derive = "0.4.1"
num-traits = "0.2.17"
tempfile = "3.9.0"
thiserror = "1.0"
uuid = { version = "1.6.1", features = ["v7"] }
clap = { version = "4.4.14", features = ["derive"] }
fdlimit = { version = "0.3.0" }
# Waiting for https://github.com/bytedance/monoio/pull/227 to be merged
monoio = { git = "https://github.com/gz/monoio.git", rev = "9303e02" }
async-lock = { version = "3.3" }
metrics = { version = "0.22.0" }
metrics-exporter-tcp = { version = "0.9.0", optional = true }
log = { version = "0.4", features = [] }
moka = { version = "0.12", features = ["future"] }
sysinfo = { version = "0.30" }
rlimit = "0.10.1"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
glommio = { version = "0.8.0", optional = true }
libc = "0.2.150"

[dev-dependencies]
rand = "0.8.5"
proptest-derive = { version = "0.4.0" }
proptest = { version = "1.4.0" }
proptest-state-machine = { version = "0.1.0" }
futures = { version = "0.3.30", features = ["executor"] }
pretty_assertions = { version = "1.4" }
chrono = "0.4.33"
env_logger = "0.10.0"
