[package]
name = "feldera-types"
version = "0.42.0"
edition = "2021"
license = "MIT"
description = "Public API types for Feldera"
homepage = "https://github.com/feldera/feldera"
repository = "https://github.com/feldera/feldera"
keywords = ["DBSP", "streaming", "analytics", "database"]
categories = ["database", "api-bindings", "network-programming"]

[features]
testing = ["proptest", "proptest-derive"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
serde_json = { version = "1.0.127", features = ["raw_value"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }
libc = "0.2.153"
log = "0.4.20"
utoipa = "4.1"
proptest = { version = "1.5.0", optional = true }
proptest-derive = { version = "0.5.0", optional = true }
rust_decimal = { package = "feldera_rust_decimal", version = "1.33.1-feldera.1" }
actix-web = "4.3"
enum-map = "2.7.3"

[dev-dependencies]
rust_decimal_macros = "1.32"
csv = "1.2.2"
