[package]
name = "feldera-types"
version = "0.44.0"
edition = "2021"
license = "MIT"
description = "Public API types for Feldera"
homepage = "https://github.com/feldera/feldera"
repository = "https://github.com/feldera/feldera"
keywords = ["DBSP", "streaming", "analytics", "database"]
categories = ["database", "api-bindings", "network-programming"]

[features]
testing = ["proptest", "proptest-derive"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
anyhow = { workspace = true, features = ["backtrace"] }
libc = { workspace = true }
log = { workspace = true }
utoipa = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rust_decimal = { package = "feldera_rust_decimal", version = "1.33.1-feldera.1" }
actix-web = { workspace = true }
enum-map = { workspace = true }
erased-serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
csv = { workspace = true }
