[package]
name = "feldera-types"
description = "Public API types for Feldera"
categories = ["database", "api-bindings", "network-programming"]
readme = "README.md"
keywords = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[features]
testing = ["proptest", "proptest-derive"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
anyhow = { workspace = true, features = ["backtrace"] }
libc = { workspace = true }
log = { workspace = true }
utoipa = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
actix-web = { workspace = true }
enum-map = { workspace = true }
erased-serde = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-nats = { workspace = true }
time = { workspace = true }

[dev-dependencies]
csv = { workspace = true }
tempfile = { workspace = true }
