[package]
name = "feldera-iceberg"
version = "0.1.0"
edition = "2021"

[dependencies]
feldera-types = { workspace = true }
feldera-adapterlib = { workspace = true }
dbsp = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { workspace = true, features = ["sync", "rt"] }
datafusion = { workspace = true }
log = { workspace = true }
iceberg = { workspace = true }
iceberg-datafusion = { workspace = true }
iceberg-catalog-glue = { workspace = true }
iceberg-catalog-rest = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }