[package]
name = "feldera-iceberg"
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }

[dependencies]
feldera-types = { workspace = true }
feldera-adapterlib = { workspace = true }
dbsp = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { workspace = true, features = ["sync", "rt"] }
datafusion = { workspace = true }
log = { workspace = true }
iceberg = { workspace = true }
iceberg-datafusion = { workspace = true }
iceberg-catalog-glue = { workspace = true }
iceberg-catalog-rest = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
