[package]
name = "feldera-ir"
description = "Intermediate representation types for Feldera Programs"
keywords = ["DBSP", "calcite", "compiler", "ir"]
categories = ["database"]
edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }

[features]
testing = ["proptest", "proptest-derive"]

[dependencies]
serde_json = { workspace = true, features = ["raw_value"] }
serde = { workspace = true, features = ["derive"] }
zip = { workspace = true }
utoipa = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }