[package]
name = "dbsp_nexmark"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Nexmark benchmark for DBSP continuous streaming data analytics"
homepage = "https://github.com/feldera/feldera"
repository = "https://github.com/feldera/feldera"
keywords = ["DBSP", "streaming", "analytics", "Nexmark", "benchmark"]
categories = []
publish = false

[features]
with-kafka = ["rdkafka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
release = false

[dependencies]
dbsp = { path = "../dbsp" }
anyhow = "1.0.57"
csv = "1.2.2"
env_logger = "0.10.0"
# Revert after https://github.com/paupino/rust-decimal/pull/637 is merged:
rust_decimal = { git = "https://github.com/gz/rust-decimal.git", rev = "ea85fdf", features = ["rkyv", "rkyv-64"] }
regex = { version = "1.6.0" }
time = { version = "0.3.14", features = ["formatting"] }
paste = { version = "1.0.9" }

rand = { version = "0.8", features = ["small_rng"] }
# cmake-build is required on Windows.
rdkafka = { version = "0.34.0", features = ["cmake-build", "ssl-vendored", "gssapi-vendored"], optional = true }
clap = { version = "3.2.8", features = ["derive", "env"] }
cached = { version = "0.38.0" }
serde = { version = "1.0", features = ["derive"] }
rkyv = { git = "https://github.com/gz/rkyv.git", rev = "3d3fd86", default-features = false, features = ["std", "size_64", "extra_traits"] }
metrics = "0.22.3"
metrics-util = "0.16.3"

[dependencies.size-of]
version = "0.1.3"
features = ["hashbrown", "time-std", "xxhash-xxh3", "rust_decimal"]

[dev-dependencies]
rstest = "0.15"
hdrhist = "0.5"
ascii_table = "4.0.2"
num-format = "0.4.0"
serde_with = "3.0.0"
indicatif = "0.17.0-rc.11"
mimalloc-rust-sys = "1.7.2"
time = { version = "0.3.14", features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }

[[bench]]
name = "nexmark"
harness = false

[[bench]]
name = "nexmark-gen"
harness = false

[[example]]
name = "generate"
required-features = ["with-kafka"]
