[package]
name = "dbsp_nexmark"
keywords = ["DBSP", "streaming", "analytics", "Nexmark", "benchmark"]
categories = []
publish = false

edition = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }

[features]
with-kafka = ["rdkafka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
release = false

[dependencies]
dbsp = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-log = { workspace = true }
rust_decimal = { package = "feldera_rust_decimal", version = "1.33.1-feldera.1", features = ["rkyv", "rkyv-64"] }
regex = { workspace = true }
time = { workspace = true, features = ["formatting"] }
paste = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rdkafka = { workspace = true, features = ["ssl", "gssapi"], optional = true }
clap = { workspace = true }
cached = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rkyv = { workspace = true, features = ["std", "size_64"] }
size-of = { workspace = true, features = ["hashbrown", "xxhash-xxh3", "rust_decimal"] }

[dev-dependencies]
rstest = { workspace = true }
hdrhist = { workspace = true }
ascii_table = { workspace = true }
num-format = { workspace = true }
serde_with = { workspace = true }
indicatif = { workspace = true }
mimalloc-rust-sys = { workspace = true }
time = { workspace = true, features = ["formatting", "serde", "serde-human-readable"] }

[[bench]]
name = "nexmark"
harness = false

[[bench]]
name = "nexmark-gen"
harness = false

[[example]]
name = "generate"
required-features = ["with-kafka"]
